2017-06-02
1) Updating! Introduce a new approach for normalization as qtotal (R funtion: qtotalNormalized)
2) aFold now moderates fold changes upon overall dispersion and gene-specific dispersion

2017-02-14
Updating! Adding new method: aFold to call DE via fold-change

2016-02-29
Updating! Enable the paired comparison by seting up 'paired' parameter in 'ABSDataSet' object

2015-08-24
This is the second version of ABSSeq.
1) Use NB distribution insead of GP to model the counts difference between conditions
2) Introduce an efficient outlier detection method: moderated MAD
3) Introduce penalty for dispersion estimation
4) Provide moderation of log2 fold-change at expression level and gene-specific dispersion