@@ -2,7 +2,7 @@ Package: ABSSeq
 Type: Package
 Title: ABSSeq: a new RNA-Seq analysis method based on modelling absolute
     expression differences
-Version: 1.22.3
+Version: 1.22.4
 Author: Wentao Yang
 Maintainer: Wentao Yang <wyang@zoologie.uni-kiel.de>
 Description: Inferring differential expression genes by absolute counts
