@@ -12,8 +12,10 @@ export("paired<-")
 export("sFactors<-")
 export(ABSDataSet)
 export(ABSSeq)
+export(ABSSeqlm)
 export(LevelstoNormFC)
 export(ReplaceOutliersByMAD)
+export(aFoldcomplexDesign)
 export(callDEs)
 export(callParameter)
 export(callParameterwithoutReplicates)
@@ -55,4 +57,3 @@ exportMethods(results)
 exportMethods(sFactors)
 import(limma)
 import(locfit)
-import(methods)
