@@ -1,3 +1,6 @@
+2017-07-18
+Updating! Adapt aFold model for complex design with linear model (R funtion: ABSSeqlm)
+
 2017-06-02
 1) Updating! Introduce a new approach for normalization as qtotal (R funtion: qtotalNormalized)
 2) aFold now moderates fold changes upon overall dispersion and gene-specific dispersion
